syntax = "proto3";

package usermg;

option go_package = "abouroumine.com/grpc-v1;grpc_v1";

service UserMg {
  rpc CreateUser(NewUser) returns(User) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 userid = 3;
}
